--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "prestart": "tsc",
     "start": "node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "startBBIL": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "dotenv-safe": "^8.2.0",
+    "dotenv-safe": "^9.1.0",
     "exceljs": "^4.2.1",
-    "fast-csv": "^4.3.6",
     "file-stream-rotator": "^0.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
